--- a/frontend/src/app/auth/register/register.component.html
+++ b/frontend/src/app/auth/register/register.component.html
@@ -1,51 +1,66 @@
-<div class='wrapper'>
-  <header>
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
-      <a class="navbar-brand" href="#">Crypto Merchandise</a>
-      <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
-        aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="collapsibleNavId">
-         <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-           <li class="nav-item">
-             <a class="nav-link" [routerLink]="['../','login']">Login </a>
-           </li>
-           <li class="nav-item disabled">
-             <a class="nav-link">Register</a>
-           </li>
-         </ul>
-
-      </div>
-    </nav>
-  </header>
+<div class="wrapper">
   <div class="container">
     <div class="row">
-      <div class="col-md-4 offset-md-4">
-        <div class="card card-login">
-          <h3 class="card-title">Register</h3>
-          <form action="">
-            <div class="form-group">
-              <label for="email">Email</label>
-              <input type="mail" class="form-control" placeholder="example@123.com">
+      <div class="col-md-10 offset-md-1">
+        <div class="card">
+          <div class="row">
+            <div class="col-md-6 left">
+              <!-- <div class="left-text">
+                <h3>Get Started</h3>
+                <br>
+                <button class="btn btn-lg btn-block btn-outline-light">Sign In with Google</button>
+                <button class="btn btn-lg btn-block btn-outline-light">Sign In with Facebook</button>
+              </div> -->
             </div>
-             <div class="form-group">
-               <label for="name">Full Name</label>
-               <input type="text" class="form-control" placeholder="example@123.com">
-             </div>
-            <div class="form-group">
-              <label for="password">Password</label>
-              <input type="password" class="form-control" placeholder="Enter Password">
+            <div class="col-md-6  right">
+              <div class="header">
+                <div class="btn-group" role="group" aria-label="Basic example">
+                  <button type="button" class="btn btn-primary" [routerLink]="['../','login']">Log In</button>
+                  <button type="button" class="btn btn-light disabled">Register</button>
+                </div>
+              </div>
+              <div class="form-div">
+                <h3>Register</h3>
+                <br>
+                <form action="">
+                  <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text"><i class="fa fa-envelope"></i></div>
+                    </div>
+                    <input type="email" class="form-control" id="inlineFormInputGroup"
+                      placeholder="Enter your Email">
+                  </div>
+
+                  <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text"><i class="fa fa-user-secret" aria-hidden="true"></i></div>
+                    </div>
+                    <input type="text" class="form-control" id="inlineFormInputGroup"
+                      placeholder="Enter your full name">
+                  </div>
+
+                  <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text"><i class="fa fa-unlock" aria-hidden="true"></i></div>
+                    </div>
+                    <input type="password" class="form-control" id="inlineFormInputGroup"
+                      placeholder="Enter your Password">
+                  </div>
+
+                  <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text"><i class="fa fa-unlock" aria-hidden="true"></i></div>
+                    </div>
+                    <input type="password" class="form-control" id="inlineFormInputGroup"
+                      placeholder="Enter your password">
+                  </div>
+                  <button class="btn btn-primary btn-lg btn-block btn-round">Sign Up</button>
+                </form>
+
+              </div>
             </div>
-            <div class="form-group">
-              <label for="password">Confirm Password</label>
-              <input type="password" class="form-control" placeholder="Enter Password">
-            </div>
-            <button class="btn btn-danger btn-block btn-round">Register</button>
-          </form>
-          <!-- <div class="forgot">
-            <a class="btn btn-link btn-danger" href="">Forgot password?</a>
-          </div> -->
+          </div>
+
         </div>
       </div>
     </div>
