--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,2 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 /* @import "~bootstrap/dist/css/bootstrap.css"; */
+@import "~font-awesome/css/font-awesome.css";
+
+.btn-primary {
+  color: #fff;
+  background-color:#031835;
+  border-color: #031835;
+}
+.btn-primary:hover {
+  color: #fff;
+  background-color: #0a213c;
+  border-color:  #151c24;
+}
