--- a/frontend/src/app/auth/register/register.component.html
+++ b/frontend/src/app/auth/register/register.component.html
@@ -22,13 +22,27 @@
               <div class="form-div">
                 <h3>Register</h3>
                 <br>
-                <form action="">
+                 <div class="success" *ngIf="successMessage">
+                   {{ successMessage }}
+                 </div>
+
+                 <!-- Error message -->
+                 <div class="alert" *ngIf="serverErrorMessages">
+                   {{serverErrorMessages}}
+                 </div>
+                <form #signUpForm="ngForm" (ngSubmit)="signUpForm.valid && onSubmit(signUpForm)">
                   <div class="input-group mb-3">
                     <div class="input-group-prepend">
                       <div class="input-group-text"><i class="fa fa-envelope"></i></div>
                     </div>
                     <input type="email" class="form-control" id="inlineFormInputGroup"
-                      placeholder="Enter your Email">
+                      placeholder="Enter your Email" name="email" [(ngModel)]="model.email"
+                      required [pattern]="emailRegex" #email="ngModel"
+                       [ngClass]="{'invalid-textbox' :signUpForm.submitted && !email.valid }">
+                       <div *ngIf="signUpForm.submitted && !email.valid " class="alert alert-danger">
+                         <div *ngIf="email?.errors.required" class="validation-message">This field is required.</div>
+                         <div *ngIf="email?.errors.pattern" class="validation-message">Invalid email address.</div>
+                       </div>
                   </div>
 
                   <div class="input-group mb-3">
@@ -36,25 +50,58 @@
                       <div class="input-group-text"><i class="fa fa-user-secret" aria-hidden="true"></i></div>
                     </div>
                     <input type="text" class="form-control" id="inlineFormInputGroup"
-                      placeholder="Enter your full name">
+                      placeholder="Enter your full name" #fullName="ngModel"
+                      [(ngModel)]="model.fullName" name="fullName" required
+                      [ngClass]="{'invalid-textbox' :signUpForm.submitted && !fullName.valid }">
+                      <div *ngIf="signUpForm.submitted && !fullName.valid" class="alert alert-danger">
+                        <label class="validation-message">This field is required.</label>
+                      </div>
+                  </div>
+
+                  <div class="input-group mb-3">
+                    <div class="input-group-prepend">
+                      <div class="input-group-text"><i class="fa fa-user-secret" aria-hidden="true"></i></div>
+                    </div>
+                    <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Enter your Phone Number"
+                      #phoneNo="ngModel" [(ngModel)]="model.phoneNo" name="phoneNo" required
+                      [ngClass]="{'invalid-textbox' :signUpForm.submitted && !phoneNo.valid }">
+                    <div *ngIf="signUpForm.submitted && !phoneNo.valid" class="alert alert-danger">
+                      <label class="validation-message">This field is required.</label>
+                    </div>
                   </div>
 
                   <div class="input-group mb-3">
                     <div class="input-group-prepend">
                       <div class="input-group-text"><i class="fa fa-unlock" aria-hidden="true"></i></div>
                     </div>
-                    <input type="password" class="form-control" id="inlineFormInputGroup"
-                      placeholder="Enter your Password">
+                     <input type="password" class="form-control" #password="ngModel" [(ngModel)]="model.password"
+                       name="password" placeholder="Enter Password" minlength="4" required
+                       [ngClass]="{'invalid-textbox' :signUpForm.submitted && !password.valid }">
+                        <div *ngIf="signUpForm.submitted && password.errors" class="alert alert-danger">
+                          <label *ngIf="password?.errors.required" class="validation-message">Password is
+                            required.</label>
+                          <label *ngIf="password?.errors.minlength" class="validation-message">Enter atleast 4
+                            characters.</label>
+                        </div>
                   </div>
 
                   <div class="input-group mb-3">
                     <div class="input-group-prepend">
                       <div class="input-group-text"><i class="fa fa-unlock" aria-hidden="true"></i></div>
                     </div>
-                    <input type="password" class="form-control" id="inlineFormInputGroup"
-                      placeholder="Enter your password">
+                    <input type="password" class="form-control" #confirmPassword="ngModel"
+                      [(ngModel)]="model.confirmPassword" compare="password" name="confirmPassword"
+                      placeholder="Confirm Password" minlength="4" required
+                      [ngClass]="{'invalid-textbox' :signUpForm.submitted && !confirmPassword.valid }">
+                    <div *ngIf="signUpForm.submitted && confirmPassword.errors" class="alert alert-danger">
+                      <label *ngIf="confirmPassword?.errors.required" class="validation-message">This field is
+                        required.</label>
+                      <label *ngIf="confirmPassword?.errors.compare" class="validation-message">Passwords do not
+                        match</label>
+                    </div>
                   </div>
-                  <button class="btn btn-primary btn-lg btn-block btn-round">Sign Up</button>
+                  <button class="btn btn-primary btn-lg btn-block btn-round" type="submit"
+                    [disabled]="!signUpForm.valid">Sign Up</button>
                 </form>
 
               </div>
